<resources>
    <string name="app_name">Fake Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="theme_switch">Theme Switch</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="is_dark">is_dark</string>
    <string name="is_hide">is_hide</string>
    <string name="time_string">Time</string>
    <string name="max_temp">Max. Temp.</string>
    <string name="min_temp">Min. Temp.</string>
    <string name="current_temp">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="default_value">.</string>
    <string name="wind_degree">Wind Direction</string>
    <string name="wind_deg">Wind Dir.</string>
    <string name="location">Location</string>
    <string name="current_weather">Current Weather</string>
    <string name="daily_weather">Daily Weather</string>
    <string name="get_time">get_time</string>
    <string name="get_maxtemp">get_max_temp</string>
    <string name="get_mintemp">get_min_temp</string>
    <string name="get_humidity">get_humidity</string>
    <string name="get_pressure">get_pressure</string>
    <string name="get_icon">get_icon</string>
    <string name="get_status">get_status</string>
    <string name="get_wind">get_wind</string>
    <string name="get_wind_dir">get_wind_dir</string>
    <string name="confirm_massege">new informations has just received. Do you want to do it again?</string>
</resources>